--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    /* align-items: center; */
 }
 .left-section {
     background-color: lightblue;
@@ -16,6 +17,6 @@
     max-width: 500px;
 }
 .right-section {
-    background-color:lightgreen;
+    background-color:lightblue;
     width: 200px;
 }
