--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,5 @@
+/* flex-shrink: 0; = don't shrink */
+/* width: 0; = shrink */
 .header {
     height: 55px;
     display: flex;
@@ -6,17 +8,86 @@
     /* align-items: center; */
 }
 .left-section {
-    background-color: lightblue;
-    width: 150px;
+    display: flex;
+    align-items: center;
+}
+.hamburger-menu {
+    height: 24px;
+    margin-left: 24px;
+    margin-right: 24px;
+}
+.youtube-logo {
+    height: 20px;
 }
 .middle-section {
-    background-color: lightpink;
+    /* background-color: lightpink; */
     flex: 1;
     margin-left: 70px;
     margin-right: 35px;
     max-width: 500px;
+    display: flex;
+    align-items: center;
+}
+.search-bar {
+    flex: 1;
+    height: 36px;
+    padding-left: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(193, 193, 193);
+    border-radius: 2px;
+    box-shadow: inset 1px 2px 3px rgba(0,0,0,0.05);
+    width: 0;
+}
+.search-bar::placeholder {
+    font-family: Roboto, Arial;
+    font-size: 16px;
+}
+.search-button {
+    height: 40px;
+    width: 66px;
+    background-color: rgb(247, 247, 247);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(193, 193, 193);
+    margin-left: -1px;
+    margin-right: 10px;
+}
+.search-icon {
+    height: 25px;
+    margin-top: 4px;
+}
+.voice-search-button {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    background-color: rgb(245, 245, 245);
+}
+.voice-search-icon {
+    height: 24px;
+    margin-top: 4px;
 }
 .right-section {
-    background-color:lightblue;
-    width: 200px;
+    /* background-color:lightblue; */
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 20px;
+    flex-shrink: 0;
+}
+.upload-icon {
+    height: 24px;
+}
+.youtube-apps-icon {
+    height: 24px;
+}
+.notifications-icon {
+    height: 24px;
+}
+.current-user-picture {
+    height: 32px;
+    border-radius: 16px;
 }
