--- a/styles/header.css
+++ b/styles/header.css
@@ -10,6 +10,8 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 100;
+
     background-color: white;
     border-bottom-width: 1px;
     border-bottom-style: solid;
@@ -92,8 +94,28 @@
 .youtube-apps-icon {
     height: 24px;
 }
+.notifications-icon-container {
+    position: relative;
+}
 .notifications-icon {
     height: 24px;
+}
+.notifications-count {
+    font-family: Roboto, Arial;
+    font-size: 10px;
+    position: absolute;
+    top: -4px;
+    right: -7px;
+    background-color: rgb(204, 0, 0);
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 2px;
+    border-style: solid;
+    border-color: white;
+    border-radius: 10px;
 }
 .current-user-picture {
     height: 32px;
