--- a/styles/header.css
+++ b/styles/header.css
@@ -64,9 +64,47 @@
     margin-left: -1px;
     margin-right: 10px;
 }
+.search-button, 
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-icon-container,
+.notifications-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+}
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
+    font-family: Roboto, Arial;
+    position: absolute;
+    background-color: rgba(96, 96, 96, 0.9);
+    color: white;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 2px;
+    font-size: 12px; 
+    bottom: -45px;
+    opacity: 0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+}
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
+    opacity: 1;
+}
 .search-icon {
     height: 25px;
-    margin-top: 4px;
 }
 .voice-search-button {
     width: 40px;
@@ -77,7 +115,6 @@
 }
 .voice-search-icon {
     height: 24px;
-    margin-top: 4px;
 }
 .right-section {
     /* background-color:lightblue; */
