--- a/styles/video.css
+++ b/styles/video.css
@@ -1,6 +1,10 @@
 .thumbnail {
     width: 100%;
 }
+.video-title-link {
+    text-decoration: none;
+    color: black;
+}
 .video-title {
     margin-top: 0;
     font-size: 14px;
@@ -14,15 +18,6 @@
 }        
 .video-author {
     margin-bottom: 4px;
-}
-
-.video-info-grid {
-    display: grid;
-    grid-template-columns: 50px 1fr;
-}
-.profile-picture {
-    width: 36px;
-    border-radius: 50px;
 }
 .thumbnail-row {
     position: relative;
@@ -48,4 +43,53 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 40px;
+}
+.video-info-grid {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+}
+.profile-picture {
+    width: 36px;
+    border-radius: 50px;
+}
+.profile-picture-container {
+    position:relative;
+    display: inline-block;
+}
+.channel-tooltip {
+    background-color: white;
+    width: 200px;
+    padding: 12px 12px;
+    box-shadow: 2px 3px 10px rgba(0,0,0,0.3);
+    border-radius: 6px;
+    position: absolute;
+    top: 55px;
+    z-index: 300;
+    
+    opacity: 0;
+    pointer-events: none;
+    
+    display: flex;
+    align-items: center;
+    transition: opacity 0.15s;
+}
+.profile-picture-container:hover .channel-tooltip {
+    opacity: 1;
+}
+.channel-tooltip-picture {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    margin-right: 8px;
+}
+.channel-tooltip-name {
+    font-family: Roboto, Arial;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 4px;
+}
+.channel-tooltip-stats {
+    font-family: Roboto, Arial;
+    font-size: 14px;
+    color: rgb(96, 96, 96);
 }
