--- a/styles/video.css
+++ b/styles/video.css
@@ -44,14 +44,35 @@
     column-gap: 16px;
     row-gap: 40px;
 }
+
+@media (max-width: 750px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
 .video-info-grid {
     display: grid;
     grid-template-columns: 50px 1fr;
 }
+
 .profile-picture {
     width: 36px;
     border-radius: 50px;
 }
+
 .profile-picture-container {
     position:relative;
     display: inline-block;
