--- a/styles/header.css
+++ b/styles/header.css
@@ -43,15 +43,12 @@
     height: 36px;
     padding-left: 10px;
     font-size: 16px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(193, 193, 193);
+    border: 1px solid rgb(193, 193, 193);
     border-radius: 2px;
     box-shadow: inset 1px 2px 3px rgba(0,0,0,0.05);
     width: 0;
 }
 .search-bar::placeholder {
-    font-family: Roboto, Arial;
     font-size: 16px;
 }
 .search-button {
@@ -80,7 +77,6 @@
 .upload-icon-container .tooltip,
 .youtube-apps-icon-container .tooltip,
 .notifications-icon-container .tooltip {
-    font-family: Roboto, Arial;
     position: absolute;
     background-color: rgba(96, 96, 96, 0.9);
     color: white;
@@ -138,7 +134,6 @@
     height: 24px;
 }
 .notifications-count {
-    font-family: Roboto, Arial;
     font-size: 10px;
     position: absolute;
     top: -4px;
