--- a/styles/video.css
+++ b/styles/video.css
@@ -24,13 +24,9 @@
     margin-bottom: 8px;   
 }
 .video-time {
-    font-family: Roboto, Arial;
     font-size: 12px;
     font-weight: 500;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
+    padding: 4px;
     border-radius: 2px;
     background-color: black;
     color: white;
@@ -60,6 +56,19 @@
 @media (min-width: 1000px) {
     .video-grid {
         grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px) {
+    .video-title {
+        font-size: 16px;
+        line-height: 24px;
+    }
+}
+
+@media (max-width: 999px) {
+    .video-title, .video-stats {
+        font-size: 14px;
     }
 }
 
